feat: add description section for Simple Omelette recipe and style updates

--- a/CSS/recipe-page-main/index.html
+++ b/CSS/recipe-page-main/index.html
@@ -34,9 +34,13 @@
         </section>
         <section class="card__content">
           <h2 class="card__title">Simple Omelette Recipe</h2>
-          An easy and quick dish, perfect for any meal. This classic omelette
-          combines beaten eggs cooked to perfection, optionally filled with your
-          choice of cheese, vegetables, or meats.
+          <div class="card__description">
+            <p>
+              An easy and quick dish, perfect for any meal. This classic
+              omelette combines beaten eggs cooked to perfection, optionally
+              filled with your choice of cheese, vegetables, or meats.
+            </p>
+          </div>
           <div class="preparation-section">
             <h3>Preparation time</h3>
             <ul>
