--- a/CSS/recipe-page-main/index.html
+++ b/CSS/recipe-page-main/index.html
@@ -44,9 +44,9 @@
           <div class="preparation-section">
             <h3>Preparation time</h3>
             <ul>
-              <li>Total: Approximately 10 minutes</li>
-              <li>Preparation: 5 minutes</li>
-              <li>Cooking: 5 minutes</li>
+              <li><span>Total</span>: Approximately 10 minutes</li>
+              <li><span>Preparation</span>: 5 minutes</li>
+              <li><span>Cooking</span>: 5 minutes</li>
             </ul>
           </div>
           <div class="ingredient-section">
