--- a/CSS/recipe-page-main/index.html
+++ b/CSS/recipe-page-main/index.html
@@ -100,13 +100,30 @@
             <hr />
           </div>
           <div class="nutrition_section">
-            <h3>Nutrition Facts</h3>
-            <ul>
-              <li>Calories 277kcal</li>
-              <li>Carbs 0g</li>
-              <li>Protein 20g</li>
-              <li>Fat 22g</li>
-            </ul>
+            <h3>Nutrition</h3>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+
+            <table>
+              <tr>
+                <th>Calories</th>
+                <td>277kcal</td>
+              </tr>
+              <tr>
+                <th>Carbs</th>
+                <td>0g</td>
+              </tr>
+              <tr>
+                <th>Protein</th>
+                <td>20g</td>
+              </tr>
+              <tr>
+                <th>Fat</th>
+                <td>22g</td>
+              </tr>
+            </table>
           </div>
         </section>
       </div>
