--- a/CSS/single-price-grid-component-master/index.html
+++ b/CSS/single-price-grid-component-master/index.html
@@ -24,13 +24,27 @@
   <body>
     <div class="container">
       <div class="card">
-        Join our community 30-day, hassle-free money back guarantee Gain access
-        to our full library of tutorials along with expert code reviews. Perfect
-        for any developers who are serious about honing their skills. Monthly
-        Subscription &dollar;29 per month Full access for less than &dollar;1 a
-        day Sign Up Why Us Tutorials by industry experts Peer &amp; expert code
-        review Coding exercises Access to our GitHub repos Community forum
-        Flashcard decks New videos every week
+        <p class="title">Join our community</p>
+        <p class="subtitle">30-day, hassle-free money back guarantee</p>
+        <p class="discrption">
+          Gain access to our full library of tutorials along with expert code
+          reviews. Perfect for any developers who are serious about honing their
+          skills.
+        </p>
+        <div class="monthly_subscription">
+          <p>Monthly Subscription</p>
+          <p>&dollar;29 per month</p>
+          <p>Full access for less than &dollar;1 a day</p>
+          <button>Sign Up</button>
+        </div>
+        <div class="reason_section">
+          <p>Why Us</p>
+          <p>
+            Tutorials by industry experts Peer &amp; expert code review Coding
+            exercises Access to our GitHub repos Community forum Flashcard decks
+            New videos every week
+          </p>
+        </div>
       </div>
       <footer>
         <p class="attribution">
