feat: restructure single price grid component layout with improved HTML semantics and CSS styling

--- a/CSS/single-price-grid-component-master/index.html
+++ b/CSS/single-price-grid-component-master/index.html
@@ -24,26 +24,30 @@
   <body>
     <div class="container">
       <div class="card">
-        <p class="title">Join our community</p>
-        <p class="subtitle">30-day, hassle-free money back guarantee</p>
-        <p class="discrption">
-          Gain access to our full library of tutorials along with expert code
-          reviews. Perfect for any developers who are serious about honing their
-          skills.
-        </p>
-        <div class="monthly_subscription">
-          <p>Monthly Subscription</p>
-          <p>&dollar;29 per month</p>
-          <p>Full access for less than &dollar;1 a day</p>
-          <button>Sign Up</button>
-        </div>
-        <div class="reason_section">
-          <p>Why Us</p>
-          <p>
-            Tutorials by industry experts Peer &amp; expert code review Coding
-            exercises Access to our GitHub repos Community forum Flashcard decks
-            New videos every week
+        <div class="community_section">
+          <p class="title">Join our community</p>
+          <p class="subtitle">30-day, hassle-free money back guarantee</p>
+          <p class="description">
+            Gain access to our full library of tutorials along with expert code
+            reviews. Perfect for any developers who are serious about honing
+            their skills.
           </p>
+        </div>
+        <div class="botton-section">
+          <div class="monthly_subscription">
+            <p>Monthly Subscription</p>
+            <p>&dollar;29 per month</p>
+            <p>Full access for less than &dollar;1 a day</p>
+            <button>Sign Up</button>
+          </div>
+          <div class="reason_section">
+            <p>Why Us</p>
+            <p>
+              Tutorials by industry experts Peer &amp; expert code review Coding
+              exercises Access to our GitHub repos Community forum Flashcard
+              decks New videos every week
+            </p>
+          </div>
         </div>
       </div>
       <footer>
