--- a/CSS/single-price-grid-component-master/index.html
+++ b/CSS/single-price-grid-component-master/index.html
@@ -33,9 +33,9 @@
             their skills.
           </p>
         </div>
-        <div class="botton-section">
+        <div class="bottom-section">
           <div class="monthly_subscription">
-            <p>Monthly Subscription</p>
+            <p class="title">Monthly Subscription</p>
             <p>&dollar;29 per month</p>
             <p>Full access for less than &dollar;1 a day</p>
             <button>Sign Up</button>
