--- a/CSS/single-price-grid-component-master/index.html
+++ b/CSS/single-price-grid-component-master/index.html
@@ -38,7 +38,7 @@
             <p class="title">Monthly Subscription</p>
             <p>&dollar;29 per month</p>
             <p>Full access for less than &dollar;1 a day</p>
-            <button>Sign Up</button>
+            <button class="sign_up_button">Sign Up</button>
           </div>
           <div class="reason_section">
             <p>Why Us</p>
