--- a/Nodejs/Unicode/index.html
+++ b/Nodejs/Unicode/index.html
@@ -16,9 +16,12 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="script.js"></script>
+  <script type="" src="script.js"></script>
   <script>
     const app = document.getElementById("app");
-    app.innerHTML = toBoldUnicode("Hello World");
+    app.innerHTML = format("Hello", {
+      bold: true,
+      underline: true,
+    });
   </script>
 </html>
